@@ -1,7 +1,8 @@
              - Version 1.1
 ==========================
 * Made HTTP headers available to the endpoint.
-* Added handling of OPTINS method to support CORS requests.
+* Added handling of OPTIONS method to support CORS requests.
+* Added CSRF protection mechanism. 
 * Changed the behaviour of 'Access-Control-Allow-Origin' response header: it 
   will be added with a value of '*' only if not set by the endpoint.   
 * Added /Health endpoint for load balancer checks.
